--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "gitflow-test",
   "version": "1.0.0",
-  "description": "webpack test",
-  "main": "main.js",
-  "scripts": {   
-    "build": "webpack --mode -p",
-    "watch": "webpack --watch"
-  },
+  "description": "webpack test", 
+  "build":"webpack",
+  "scripts": {
+    "start": "opn http://127.0.0.1:8080 && http-server ./"
+  },  
   "keywords": ["webpack"],
   "author": "buxfix",
   "license": "ISC", 
   "repository": {
     "type": "git",
     "url": "https://github.com/buxfix/learngitflow.git"
+  },
+  "scripts": {   
+    "build": "webpack --mode -p",
+    "watch": "webpack --watch"    
   }
 }
